--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 	<article id="contact">
 		<h2 class="major">Contact</h2>
 			<p class="mail"><b>EMAIL: wavebusiness00@gmail.com</b></p>
-			<form action="mailto:wavebusiness00@gmail.com" method="POST">
+			<form action="https://formsubmit.co/wavebusiness00@gmail.com" method="POST">
 			<input type="hidden" name="_captcha" value="false">
 			<div class="fields">
 				<div class="field half">
