--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<font size="6">
 					<i class="fas fa-gamepad"></i> <a href="#Gamejam"><b>Game Jams</b></a>
 				</font>
-				<p>I have participated in a numerous amount of Game Jams, including the UDC GAMEJAM.</p>
+				<p>I have participated in a numerous amount of game jams, including the UDC GAMEJAM.</p>
 				<font size="6">
 					<i class="fas fa-dice-d6"></i> <a href="#3D"><b>3D ART</b></a>
 				</font>
@@ -83,7 +83,7 @@
 				<font size="6">
 					<i class="fas fa-brush"></i> <a href="#2D"><b>2D ART</b></a>
 				</font>
-				<p>I have dipped my feet in 2D art and used software such as photoshop, krita and aseprite.</p>
+				<p>I have dipped my feet in 2D art and used software such as Photoshop, Krita and Aseprite.</p>
 				<font size="6">
 					<i class="fas fa-trophy"></i> <a href="#Tutorial"><b>Tutorials</b></a>
 				</font>
