--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">Introduction</h2>
-				<span class="image main"><img src="images/bounce.gif" alt="" /></span>
+				<span class="image main"><img src="images/2D.png" alt="" /></span>
 				<p>Hey! Im <b>INDIEWAVE</b>, an <i>indie</i> game developer with 5 years of experience building everything from experimental prototypes to fully-fledged interactive worlds.
 					 My dream is to create games and experiences that leave players feeling just a little different than when they started---games
 					 that stick with you emotionally.
