--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   					<span>L</span><span>i</span><span>a</span><span>m</span> 
   					<span>W</span><span>i</span><span>s</span><span>n</span><span>i</span><span>e</span><span>w</span><span>s</span><span>k</span><span>i</span>
 				</h1>
-					<code class = "handle">@indiewave</code>
-				<p style="text-transform: uppercase; font-weight: bold; margin-bottom: 10px; font-size: 1.25rem"><b>Unity Game Developer | 3D Artist</b></p>
+					<code class = "handle"></code>
+				<p style="text-transform: uppercase; font-weight: bold; margin-bottom: 10px; margin-top: 20px; font-size: 1.25rem"><b>Unity Game Developer | 3D Artist</b></p>
 						<p>I hope to inspire and create experiences that are memorable.<br /> View my journey <b><a href="https://www.youtube.com/@ind1ewave/videos" class="youtube-link">here.</a></b></p>
 				</div>
 			</div>
@@ -38,6 +38,7 @@
 					<li><a href="#intro">About</a></li>
 					<li><a href="https://www.artstation.com/indiewave2">3D Work</a></li>
 					<li><a href="#blank">Resume</a></li>
+					<li><a href="#game-jams">Game Jams</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
@@ -56,6 +57,7 @@
 				<p>Since I am a 17 year old still developing my life and my skills, I am currently in education and additionally available for freelance work (3D ART).
 				</p>
 			</article>
+			
 
 	<!-- Contact -->
 	<article id="contact">
@@ -90,6 +92,34 @@
 	</ul>
 </article>
 </section>
+
+<!-- Game Jams -->
+<article id="game-jams">
+  <h2 class="major">Game Jams</h2>
+  <div class="fields">
+    <div class="field half">
+      <div class="jam-card">
+        <img src="images/dungeon.png" alt="Echoes thumbnail" />
+        <h3>Dungeon Descent</h3>
+        <p>UDC Jam #29 • Falling</p>
+        <ul class="actions">
+          <li><a href="https://indiewave.itch.io/dungeon-descent" class="button primary">Play</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="field half">
+      <div class="jam-card">
+        <img src="images/logo.png" alt="Project B thumbnail" />
+        <h3>placeholder text</h3>
+        <p>placeholder text • placeholder text</p>
+        <ul class="actions">
+          <li><a href="" class="button primary">Play</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- repeat .field .half for more jams -->
+  </div>
+</article>
 
 
 		</div>
